--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ a:hover, a:focus, a:active, a:visited {
 
 
 .hero-header {
-	background: linear-gradient(to bottom, #ffffff, #4169E1);
+	background: linear-gradient(to bottom, #4169E1, #ffffff);
 	min-height: 600px;
 	padding: 5em;
 	color: black;
