--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,33 @@ ul.footer-menu li a:hover {
     }
 }
 
+.container-fluid.footer {
+    /*position: absolute; !* Устанавливаем абсолютное позиционирование *!*/
+    top: 0; /* Установите нужное значение для позиционирования */
+    left: 0;
+    right: 0;
+    z-index: 1000; /* Убедитесь, что контейнер отображается поверх других элементов */
+}
+
+.submit-button {
+    width: 100%; /* Кнопка занимает всю ширину контейнера */
+    padding: 10px; /* Установите нужные отступы для кнопки */
+    font-size: 16px; /* Установите нужный размер шрифта */
+    position: absolute;
+}
+
+/* Убедитесь, что кнопка не перекрывается другими элементами */
+.btn-yellow {
+    border: none; /* Убираем обводку */
+    border-radius: 5px; /* Скругляем углы кнопки */
+}
+
+/* Убедитесь, что кнопка выглядит хорошо на мобильных устройствах */
+@media (max-width: 768px) {
+    .submit-button {
+        font-size: 14px; /* Уменьшаем размер шрифта для мобильных устройств */
+    }
+}
 
 /* iPad Portrait */
 
