--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,11 @@ a:hover, a:focus, a:active, a:visited {
 
 
 .hero-header {
-	background: linear-gradient(to bottom, #4169E1, #ffffff);
+	/*background: linear-gradient(to bottom, #4169E1, #ffffff);*/
 	min-height: 600px;
 	padding: 5em;
 	color: black;
+    text-align: center;
 }
 .hero-header h1 {
 	margin: 1em 0 0 0;
