--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,10 @@ a:hover, a:focus, a:active, a:visited {
 }
 .hero-header .rocket {
 	max-width: 100%;
+    margin-top: 30px;
 }
 .me-row {
-	padding: 30px 0;
+	padding: 40px 0;
 }
 .row-title {
 	font-weight: 400;
